--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,38 @@
 td {
-    border: 2px solid #333;
-    height: 100px;
-    width: 100px;
-    text-align: center;
+    border        : 2px solid #333;
+    height        : 100px;
+    width         : 100px;
+    text-align    : center;
     vertical-align: middle;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 70px;
-    cursor: pointer;
+    font-family   : "Comic Sans MS", cursive, sans-serif;
+    font-size     : 70px;
+    cursor        : pointer;
 }
-table{
+
+table {
     border-collapse: collapse;
-    position: absolute;
-    left: 50%;
-    margin-left: -155px;
-    top: 50px;
+    position       : absolute;
+    left           : 50%;
+    margin-left    : -155px;
+    top            : 50px;
 }
-table tr:first-child td{
+
+table tr:first-child td {
     /* border-top: 0; */
+}
+
+.endgame {
+    display         : none;
+    width           : 200px;
+    top             : 120px;
+    background-color: rgba(37, 167, 54, 0.8);
+    position        : absolute;
+    left            : 50%;
+    margin-left     : -100px;
+    padding-top     : 50px;
+    padding-bottom  : 50px;
+    text-align      : center;
+    border-radius   : 5px;
+    color           : white;
+    font-size       : 2em;
 }
