--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
-	background: #e0e5ec;
+	background : #e0e5ec;
+	font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 td {
@@ -8,9 +9,25 @@ td {
 	width         : 100px;
 	text-align    : center;
 	vertical-align: middle;
-	font-family   : "Comic Sans MS", cursive, sans-serif;
 	font-size     : 70px;
 	cursor        : pointer;
+	box-shadow    : 0 2px 10px rgba(0, 0, 0, .3);
+}
+
+table tr:first-child td {
+	border-top: 5px solid #333;
+}
+
+table tr:last-child td {
+	border-bottom: 5px solid #333;
+}
+
+table tr td:first-child {
+	border-left: 5px solid #333;
+}
+
+table tr td:last-child {
+	border-right: 5px solid #333;
 }
 
 table {
@@ -47,7 +64,6 @@ button {
 	color        : #fff;
 	border-radius: 5px;
 	padding      : 10px 25px;
-	font-family  : 'Lato', sans-serif;
 	font-weight  : 500;
 	background   : transparent;
 	cursor       : pointer;
@@ -81,7 +97,6 @@ button {
 @media (min-width: 1080px) {
 	.replay {
 		left           : 45%;
-		font-family    : "Comic Sans MS", cursive, sans-serif;
 		position       : relative;
 		display        : inline-block;
 		padding        : 1.2em 2em;
